refactor(CBS-256567:LN-57613:LN-57940): Use platform arch unit
- Fix minor issues
- Bump base-loan to 2.1.1-SNAPSHOT